; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tdes.c_taosDesDecode.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tdes.c_taosDesDecode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DECRYPTION_MODE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @taosDesDecode(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = bitcast i32* %4 to i8*
  store i8* %10, i8** %7, align 8
  %11 = load i32, i32* %6, align 4
  %12 = add nsw i32 %11, 8
  %13 = call i8* @calloc(i32 %12, i32 1)
  store i8* %13, i8** %8, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @memcpy(i8* %14, i8* %15, i32 %16)
  %18 = load i32, i32* %6, align 4
  %19 = add nsw i32 %18, 8
  store i32 %19, i32* %6, align 4
  %20 = load i8*, i8** %7, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* @DECRYPTION_MODE, align 4
  %24 = call i8* @taosDesImp(i8* %20, i8* %21, i32 %22, i32 %23)
  store i8* %24, i8** %9, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = call i32 @free(i8* %25)
  %27 = load i8*, i8** %9, align 8
  ret i8* %27
}

declare dso_local i8* @calloc(i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i8* @taosDesImp(i8*, i8*, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
